# EpiChess

./: APiece.cpp  APiece.hpp  Bishop.cpp  CMakeLists.txt  Chessboard.cpp  Chessboard.hpp  IPiece.hpp  King.cpp  King.hpp  Knight.cpp  Knight.hpp  Makefile  Pawn.cpp  Pawn.hpp  Queen.cpp  README.md  Tower.cpp  Tower.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
include/: Application.hpp  Game.hpp  Rect.hpp
include/pieces/: APiece.hpp  Bishop.hpp  Chessboard.hpp  IPiece.hpp  King.hpp  Knight.hpp  Pawn.hpp  Queen.hpp  Tower.hpp
src/: Application.cpp  Chessboard.cpp
src/pieces/: APiece.cpp  Bishop.cpp  King.cpp  Knight.cpp  Pawn.cpp  Queen.cpp  Tower.cpp
